Images link update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="brand-logo">
                 <!-- <h1>Maa Laxmi Crane</h1> -->
-                <img src="/assets/Logo.png" alt="">
+                <img src="assets/Logo.png" alt="">
             </div>
             <ul>
                 <li><a href="">Home</a></li>
@@ -53,11 +53,11 @@
     <!-- brand widgets -->
     <div id="brand-widget">
         <div class="brand-images">
-            <img src="/assets/MCrane.png" alt="">
-            <img src="/assets/Mcrane2.png" alt="">
-            <img src="/assets/hydraulictelescopiccranes.png" alt="">
-            <img src="/assets/crane truck services.png" alt="">
-            <img src="/assets/MaalaxmiCraneServiceJCBTruck.png" alt="">
+            <img src="assets/MCrane.png" alt="">
+            <img src="assets/Mcrane2.png" alt="">
+            <img src="assets/hydraulictelescopiccranes.png" alt="">
+            <img src="assets/crane truck services.png" alt="">
+            <img src="assets/MaalaxmiCraneServiceJCBTruck.png" alt="">
         </div>
     </div>
 
@@ -164,20 +164,20 @@
         <div class="recent-project">
             <div class="project-content">
 
-                <a class="project-img"><img src="/assets/Industrial work.jpg" alt=""></a>
+                <a class="project-img"><img src="assets/Industrial work.jpg" alt=""></a>
                 <h3 class="project-title">Insudtrial Work</h3>
 
             </div>
             <div class="project-content">
-                <a class="project-img"><img src="/assets/railwaybridge.jpg" alt="" srcset=""></a>
+                <a class="project-img"><img src="assets/railwaybridge.jpg" alt="" srcset=""></a>
                 <h3 class="project-title">RailWay Bridge</h3>
             </div>
             <div class="project-content">
-                <a class="project-img"><img src="/assets/AeroplanePlatform.jpg" alt=""></a>
+                <a class="project-img"><img src="assets/AeroplanePlatform.jpg" alt=""></a>
                 <h3 class="project-title">Aeroplane Platform</h3>
             </div>
             <div class="project-content">
-                <a class="project-img"><img src="/assets/railwaybridge.jpg" alt="" srcset=""></a>
+                <a class="project-img"><img src="assets/railwaybridge.jpg" alt="" srcset=""></a>
                 <h3 class="project-title">RailWay Bridge</h3>
 
             </div>
@@ -199,7 +199,7 @@
             </div>
             <div class="owner-contact">
                 <div class="owner">
-                    <a href="#" class="owner-img"><img src="/assets/owner.jpg" alt=""></a>
+                    <a href="#" class="owner-img"><img src="assets/owner.jpg" alt=""></a>
                     <div class="owner-details">
                         <h3 class="owner-name">Harpal Singh</h3>
                         <p class="owner-info"><i class="fa fa-quote-left" aria-hidden="true"></i>
