--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     </footer>
     <script src="https://use.fontawesome.com/4b3bd2e5a2.js"></script>
     <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
-    <script src="/JS/app.js"></script>
+    <script src="../JS/app.js"></script>
 </body>
 
 </html>
